# memory-guard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  PRD.md  RELEASING.md  index.html  package-lock.json  package.json  todo.md  vite.config.ts
.agents/skills/git-commit/: SKILL.md
.agents/skills/git-commit/agents/: openai.yaml
.agents/skills/git-commit/scripts/: git_commit.py
.github/workflows/: release.yml
scripts/: bundle-local-dmg.sh  check-release-version.mjs  release.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
