[package]
name = "memory-guard"
version = "0.1.5"
description = "A lightweight macOS menu bar memory monitor."
authors = ["Memory Guard"]
edition = "2021"

[lib]
name = "mac_memory_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
